Oozie scheduler support (#152)